# HPC-research

./: CMakeLists.txt  Dockerfile  LICENSE  benchmark_af.py  exp_cfg.yaml  exp_pipeline.py  explosion.af  init_creator.py  main.cpp  mpi.cpp  paratest.py  plot.plt  plot.py  plot4d.plt  plot4dvector_field.plt  plot5d.plt  plot_ly.py  test.py  test3D.py  torch_3D.py
gnuplot/: plot_4d_vector.plt
mpi/: working_mpi.cpp
src/arrayfire/: main.cpp
src/cpp/: main  main.cpp
src/mpi/: mpi.cpp
src/oneAPI/: main.cpp
src/python/: torch_3D.py
sycl/: DPCPPApp.cpp  main  main.cpp
vis/gnuplot/: plot_4d_scalar.plt
